# MPPI

./: README.md  protocol-and-parameters.md  pyproject.toml
configs/: T_base_cam_back.yaml  T_base_cam_side.yaml  pointworld_static_aabbs.json  side_cam_info.yaml
data/pw_acceptance/obs_infl/: client_report.json
data/pw_acceptance/obs_infl/server/: 000010.json  000011.json  000012.json  000013.json  000014.json  000015.json  000016.json  000017.json  000018.json  000019.json  000020.json  000021.json  000022.json  000023.json  000024.json  000025.json  000026.json  000027.json  000028.json  000029.json  000030.json  000031.json  000032.json  000033.json  000034.json  000035.json  000036.json  000037.json  000038.json  000039.json  000040.json  000041.json  000042.json  000043.json  000044.json  000045.json  000046.json  000047.json  000048.json  000049.json  (+10 more)
scripts/: run_replay_client.sh  run_server.sh
src/mppi/: cli.py
src/mppi/comm/: ws_client_sync_pcl.py  ws_server_async_pcl.py
src/mppi/costs/: pointworld_cost.py
src/mppi/mpc/: solver.py
src/mppi/pointworld_ext/: flows.py  geometry.py  input_config.py  pointworld_batch_adapter.py  scene_flow_builder.py  tracker_interface.py  window_buffer.py  wrapper.py
src/mppi/protocol/: __init__.py  types_pcl.py
tests/: Tests_Todo.md  pw_replay_acceptance.py  result.md  run_pw_replay_acceptance.sh  test_pointworld_flows.py
